# roprogram_termp

./: README.md
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/srv/: Cnt.srv
ros2_RobotSimulation/IFRA_ConveyorBelt/ros2_conveyorbelt/: CMakeLists.txt  package.xml
ros2_RobotSimulation/factory_amr_navigation/: CMakeLists.txt  package.xml
ros2_RobotSimulation/factory_amr_navigation/launch/: nav2_custom.launch.py
ros2_RobotSimulation/factory_amr_navigation/map/: factory_map_saved.pgm  factory_map_saved.yaml  factory_map_saved_serial.data
ros2_RobotSimulation/factory_amr_navigation/param/: amr1_amcl_config.yaml  amr1_behavior.yaml  amr1_bt_navigator.yaml  amr1_controller.yaml  amr1_planner_server.yaml  amr2_amcl_config.yaml  amr2_behavior.yaml  amr2_bt_navigator.yaml  amr2_controller.yaml  amr2_planner_server.yaml  amr3_amcl_config.yaml  amr3_behavior.yaml  amr3_bt_navigator.yaml  amr3_controller.yaml  amr3_planner_server.yaml  behavior.yaml  bt_navigator.yaml  bt_navigator_humble.yaml  controller.yaml  planner_server.yaml  waypoint_follower.yaml
ros2_RobotSimulation/factory_project/: .gitignore  README.md
ros2_RobotSimulation/ros2_data/: package.xml
ros2_RobotSimulation/ros2_execution/: CMakeLists.txt  package.xml
ros2_RobotSimulation/ros2_execution/programs/: toCube.txt  toPos1.txt  toPos2.txt  toPos3.txt
ros2_RobotSimulation/ros2_execution/scripts/: execute_controller.py  ros2_execution.py  send_goal.py  srv_counter.py
ros2_RobotSimulation/ros2_grasping/: package.xml
(+72 files in other folders)
