<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_execution</name>
  <version>0.0.0</version>
  <description>IFRA Group - Cranfield University. Package for execution of different programs/sequences using ROS2 Robot Triggers (Actions).</description>

  <author>Mikel Bueno Viso</author>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">Mikel Bueno Viso</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros2_data</build_depend>
  <build_depend>ros2_grasping</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2_data</exec_depend>
  <exec_depend>ros2_grasping</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--This resolved gazebo problems-->
    <gazebo_ros gazebo_model_path="${prefix}/.."/> 
  </export>
</package>